open external links with another tab

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <!--Isso aqui é um comentário-->
     <nav class="positioned">
       <a href="index.html#home">Home</a>
-      <a href="https://www.formula1.com/">F1 Official Website</a>
+      <a href="https://www.formula1.com/" target="_blank">F1 Official Website</a>
       <a href="#">World</a>
       <a href="#">Finance</a>
-      <a href="https://the-race.com/formula-1/mark-hughes-where-the-2021-f1-title-was-really-won-and-lost/">Influencers</a>
+      <a href="https://the-race.com/formula-1/mark-hughes-where-the-2021-f1-title-was-really-won-and-lost/" target="_blank">Influencers</a>
       <a href="index.html#contact">Contact</a>
     </nav>
 
