--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="positioned">
       <a href="index.html#home">Home</a>
       <a href="https://www.formula1.com/" target="_blank">F1 Official Website</a>
-      <a href="#">Member's club</a>
+      <a href="login.html">Member's club (new!)</a>
       <a href="https://the-race.com/formula-1/mark-hughes-where-the-2021-f1-title-was-really-won-and-lost/" target="_blank">References</a>
       <a href="index.html#contact">Contact</a>
     </nav>
@@ -309,7 +309,7 @@
     
     </main>
 
-    <svg width="100%" height="100%">
+    <svg width="100%" height="150px">
       <rect width="100%" height="100%" fill="green" />
       <polygon points="800,0 1640,225 0,225" fill="yellow"/>
       <circle cx="93%" cy="125%" r="150" fill="blue" stroke="black" />
