Main logo more interactive

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <header>
     <h1>Welcome</h1>
     <button class="user-change">Change user</button>
-    <img src="images/F1logo_2018.png" alt="F1 logo">
-    <h2 id="subtitle">F1 season 2021: The greatest season no one could ever wonder</h2>
+    <img src="images/F1logo_2018.png" alt="F1 logo" id="f1Logo">
+    <h2 id="subtitle">F1'2021: The season no one could ever wonder</h2>
     <h3>by Jhonny Goya </h3>
 
     </header>
