forms positions and final table counters

--- a/index.html
+++ b/index.html
@@ -375,21 +375,22 @@
             
             <tbody>
               <tr>
-                <td>Lambança da Mercedes / Lewis </td>
-                <td>5</td>
-              </tr>
-              <tr>
                 <td>Sorte a favor da Mercedes / Lewis </td>
-                <td>5</td>
-              </tr>
-              <tr>
-                <td>Pontos potencialmente perdidos</td>
-                <td id="pontosPerdidos">39</td>
+                <td><span id="contaSorte"></span></td>
               </tr>
               <tr>
                 <td>Pontos potencialmente favorecidos</td>
-                <td id="pontosFavorecidos">14</td>
+                <td><span id="pontosFavorecidos"></span></td>
               </tr>
+              <tr>
+                <td>Lambança da Mercedes / Lewis </td>
+                <td><span id="contaLambanca"></span></td>
+              </tr>
+              <tr>
+                <td>Pontos potencialmente perdidos</td>
+                <td><span id="pontosPerdidos"></span></td>
+              </tr>
+
             </tbody>
           
             <tfoot>
