--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
           <input type="password" id="pwd" name="pwd">
         </p>
         <p>
-          <input type="submit" value="Log in!">
+          <button type="submit" id="btnlogin">Log in!</button>
         </p>    
 
       </fieldset>
@@ -113,7 +113,7 @@
           </select>
         </p>       
         <p>
-          <input type="submit" value="Create!">
+          <input type="submit" value="Create!" id="btncreate">
         </p>
       </fieldset>
     </form>
