text content changes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       -->
       <br>
       <img src="images/F1logo_2018.png" alt="F1 logo" id="f1Logo">
-      <h2 id="subtitle">F1'2021: The season no one could ever wonder</h2>
+      <h2 id="subtitle">F1'2021: What are the odds?</h2>
     </header>
     
     <nav class="positioned">
