--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <meta charset="utf-8">
     <meta lang="en-US">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width; user-scalable=yes">
     <meta name="author" content="Jhonny Goya">
     <meta name="description" content="This page is used to put in practice all the new features that I learn. It doesn't have to make any sense."> <!--isso aparece na busca-->
     <title>This is my test page</title>
